--- a/Moderncv/main.tex
+++ b/Moderncv/main.tex
@@ -1,4 +1,4 @@
-%% start of file `template.tex'.
+	%% start of file `template.tex'.
 %% Copyright 2006-2013 Xavier Danaux (xdanaux@gmail.com).
 %
 % This work may be distributed and/or modified under the
@@ -24,8 +24,9 @@
 %\setlength{\makecvtitlenamewidth}{10cm}           % for the 'classic' style, if you want to force the width allocated to your name and avoid line breaks. be careful though, the length is normally calculated to avoid any overlap with your personal info; use this at your own typographical risks...
 
 % personal data
-\name{Sinan Emir}{Korkmaz}
-\title{Resumé}                               % optional, remove / comment the line if not wanted
+\name{Sinan Emir}{KORKMAZ}
+
+\title{Electrical \& Electronics Engineer}                               % optional, remove / comment the line if not wanted
 %\address{Seymen Selay Evleri A block no:10 Isci Bloklari Mah.}{06100 Ankara}{Turkey}% optional, remove / comment the line if not wanted; the "postcode city" and and "country" arguments can be omitted or provided empty
 \phone[mobile]{+90~(538)~526~95~42}                   % optional, remove / comment the line if not wanted
 %\phone[fixed]{+2~(345)~678~901}                    % optional, remove / comment the line if not wanted
@@ -33,7 +34,7 @@
 \email{sinanemirkorkmaz@gmail.com}                               % optional, remove / comment the line if not wanted
 %\homepage{www.johndoe.com}                         % optional, remove / comment the line if not wanted
 %\extrainfo{additional information}                 % optional, remove / comment the line if not wanted
-\photo[64pt][0.4pt]{sinan2.jpg}     
+\photo[80pt][0.4pt]{sinan2.jpg}     
 %\photo[64pt][0.4pt]{picture}                       % optional, remove / comment the line if not wanted; '64pt' is the height the picture must be resized to, 0.4pt is the thickness of the frame around it (put it to 0pt for no frame) and 'picture' is the name of the picture file
 %\quote{Some quote}                                 % optional, remove / comment the line if not wanted
 
@@ -55,8 +56,9 @@
 \makecvtitle
 
 \section{Education}
-\cventry{2013--2018}{Bachelor of Science, Electrical \& Electronics Engineering}{Middle East Technical University}{Ankara}{}{Gpa: 2.94}  % arguments 3 to 6 can be left empty
-\cventry{2009--2018}{High School Degree}{Zonguldak Fen Lisesi}{Zonguldak}{}{}
+\cventry{2014--2018}{Bachelor of Science, Electrical \& Electronics Engineering}{Middle East Technical University}{Ankara}{}{Gpa: 2.94}  % arguments 3 to 6 can be left empty
+\cventry{2013--2014}{The English Preparatory Program}{Middle East Technical University}{Ankara}{}{}  % arguments 3 to 6 can be left empty
+\cventry{2009--2013}{High School Degree}{Zonguldak Fen Lisesi}{Zonguldak}{}{}
 
 %\section{Master thesis}
 %\cvitem{title}{\emph{Title}}
@@ -64,20 +66,20 @@
 %\cvitem{description}{Short thesis abstract}
 
 \section{Experience}
-\subsection{Vocational}
-\cventry{2018--Ongoing}{Embedded Systems Engineer}{Tualcom Inc.}{Ankara}{}{General description no longer than 1--2 lines.\newline{}%
-Detailed achievements:%
+%\subsection{Vocational}
+\cventry{2018--Ongoing}{Embedded Systems Engineer}{Tualcom Inc.}{Ankara}{}{
+%
 \begin{itemize}%
 \item Designed a programming language and implemented its compiler on python
-\item Designed a pipelined processor and its implementation on verilog
-\item Designed a GPS reciever:
+\item Designed a pipelined processor and implemented on verilog
+\item Worked on GPS reciever project:
 	 \begin{itemize}%
 	 \item Demodulation of the satellite signals
 	 \item Finding the satellites' positions from demodulated signals
 	 \item Solving the receiver's position from satellites' positions  
 	 \end{itemize}
 \item Designed a Controlled Reception Pattern Antennas device as GPS anti jammer
-\item Worked on Tracker Antenna Device for air vehicles 
+\item Worked on Tracker Antenna Device
 \item Designed an authentication system for portable software
 \item Designed a simulation software with python for multiple antenna receptive pattern 
 \end{itemize}}
@@ -89,29 +91,37 @@ Detailed achievements:%
 \end{itemize}
 }
 \cventry{Summer 2017}{Intern}{Tualcom Inc.}{Ankara}{}{
-Worked on embedded Linux systems for video compression solutions.
+\begin{itemize}
+\item Worked on embedded Linux systems for video compression solutions.
+\end{itemize}
 }
 \cventry{Summer 2016}{Intern}{TUBITAK-BILGEM \newline ADVANCED TECHNOLOGIES RESEARCH INSTITUTE
-}{Ankara}{}{Worked on Digital Signal Processing and radar simulation}
+}{Ankara}{}{
+\begin{itemize}
+\item Worked on Digital Signal Processing and radar simulation
+\end{itemize}
+}
 
 \section{Languages}
 \cvitem{Turkish}{Native}{}
 \cvitem{English}{Advance}{}
-\cvitem{French}{Beginner}{}
-
+\pagebreak
+%\cvitem{French}{Beginner}{}
+%\cvdoubleitem{Turkish}{Native}{French}{Beginner}
+%\cvdoubleitem{English}{Advance}{}{}
 \section{Computer skills}
 \cvlistitem{Advanced in Verilog Hardware Description language}
 \cvlistitem{Advanced in Python}
 \cvlistitem{Advanced in C programming language}
 \cvlistitem{Good with C++ for Object-Oriented Programming }
+\cvlistitem{Good with ARM Assembly}
 \cvlistitem{Good with JavaScript}
 \cvlistitem{Good with SQL}
-\cvlistitem{Good with ARM Assembly}
-\cvlistitem{Intermediate level of knowledge about Robotics}
 \cvlistitem{Good with machine learning algorithms}
+\cvlistitem{Intermediate level of knowledge about Robotics}
 \cvlistitem{Intermediate level of Matlab}
 \cvlistitem{Familiar with Vivado High Level Synthesis(HLS) tool}
-\cvlistitem{}
+\cvlistitem{Beginner level of Scala}
 %\cvdoubleitem{category 1}{XXX, YYY, ZZZ}{category 4}{XXX, YYY, ZZZ}
 %\cvdoubleitem{category 2}{XXX, YYY, ZZZ}{category 5}{XXX, YYY, ZZZ}
 %\cvdoubleitem{category 3}{XXX, YYY, ZZZ}{category 6native speaker}{XXX, YYY, ZZZ}
