--- a/Moderncv/moderncvbodyiii.sty
+++ b/Moderncv/moderncvbodyiii.sty
@@ -170,6 +170,7 @@
   \end{tabular*}%
   \ifx&#7&%
   \else{\\%
+  	%\begin{minipage}{\linewidth}%
     \begin{minipage}{\maincolumnwidth}%
       \small#7%
     \end{minipage}}\fi%
