--- a/Moderncv/main.tex
+++ b/Moderncv/main.tex
@@ -56,6 +56,7 @@
 \makecvtitle
 
 \section{Education}
+\cventry{2019-Ongoing}{Master of Science, Cybersecurity}{Middle East Technical University}{Ankara}{}{}  % arguments 3 to 6 can be left empty
 \cventry{2014--2018}{Bachelor of Science, Electrical \& Electronics Engineering}{Middle East Technical University}{Ankara}{}{Gpa: 2.94}  % arguments 3 to 6 can be left empty
 \cventry{2013--2014}{The English Preparatory Program}{Middle East Technical University}{Ankara}{}{}  % arguments 3 to 6 can be left empty
 \cventry{2009--2013}{High School Degree}{Zonguldak Fen Lisesi}{Zonguldak}{}{}
